# rust-hello

./: Cargo.toml  README.md  VertexColorsTest.ply  byteasm.ebnf  byteasm.mkd  cargo.toml  foo.txt  infile.bcas  mat4math.c  symbols.asm  toilet_scaled.mtl
VertexPainCube/: VertexPainCube.ply  VertexPainCube2.ply
assets/: DudeBaseOperator.wings  DudeBaseOperatorCutout.wings  MechaAssembly.wings  MechaLeg01.FCStd  MechaSkimpyLegs.wings  SmoothOperator.blend
src/: main.rs  mecha.rs  rasterize.rs
